Worked with Register and Login

--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/header/header.component.html
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/header/header.component.html
@@ -3,6 +3,7 @@
       <h1>Nepalese Game Portal – A Fun Online Experience</h1>
     </div>
     <div class="navbar-links">
+      <a href="">Home</a>
       <a href="/profile">Profile</a>
       <a href="/login">Login</a>
     </div>
