--- a/Week6-AjaxAndCRUD/public/css/styles.css
+++ b/Week6-AjaxAndCRUD/public/css/styles.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -18,6 +19,18 @@ header {
   height: 50px;
   width: 100%;
   background-color: lightgrey;
+}
+
+nav {
+  display: flex;
+  padding-top: 12px;
+}
+
+nav ul {
+  width: 200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 li {
@@ -35,7 +48,58 @@ h2 {
 }
 
 .content {
+  justify-content: center;
+  margin-top: 50px;
   flex: 1;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 25px;
+}
+
+.center form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 500px;
+}
+
+label {
+  text-align: right;
+  clear: both;
+  float: left;
+  margin-right: 15px;
+}
+
+label > span {
+  text-align: right;
+  clear: both;
+  float: left;
+  margin-right: 15px;
+}
+
+input {
+  height: 20px;
+  width: 100%;
+}
+
+button {
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  width: 100px;
+  background-color: #256fde;
+  color: white;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #1e5dc1;
 }
 
 footer {
@@ -46,6 +110,7 @@ footer {
   bottom: 0;
 }
 
+/* Task Management styles */
 .task-buttons {
   display: flex;
   justify-content: center;
@@ -55,7 +120,7 @@ footer {
 .task-buttons button {
   margin-right: 10px;
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   cursor: pointer;
@@ -72,11 +137,14 @@ table {
   margin-top: 20px;
 }
 
-table, th, td {
+table,
+th,
+td {
   border: 1px solid black;
 }
 
-th, td {
+th,
+td {
   padding: 15px;
   text-align: left;
 }
@@ -89,21 +157,35 @@ th {
   margin-top: 20px;
 }
 
-.form-container label {
-  display: block;
-  margin-bottom: 10px;
+.form-container .form-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
-.form-container input[type="text"], .form-container input[type="checkbox"] {
-  width: 100%;
-  padding: 8px;
-  margin: 4px 0;
-  box-sizing: border-box;
+.form-container .form-row label {
+  flex: 1;
+  margin-right: 10px;
+  text-align: right;
+  clear: both;
+  float: left;
+  margin-right: 15px;
+}
+
+.form-container .form-row input[type="text"],
+.form-container .form-row input[type="checkbox"] {
+  flex: 2;
+}
+
+.form-container .completed-container {
+  display: flex;
+  align-items: center;
 }
 
 .form-container button {
+  margin-top: 20px; /* Add spacing for bottom button */
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   cursor: pointer;
