Added Games to the database from sample data

--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/footer/footer.component.css
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/footer/footer.component.css
@@ -5,6 +5,16 @@ footer {
   text-align: center;
 }
 
+.main {
+  flex: 1;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
 footer nav ul {
   list-style: none;
   padding: 0;
