--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/header/header.component.html
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/header/header.component.html
@@ -3,10 +3,11 @@
     <h1>Nepalese Game Portal – A Fun Online Experience</h1>
   </div>
   <div class="navbar-links">
+    <a *ngIf="(user$ | async)?.is_admin" [routerLink]="['/manage-games']">Manage Games</a>
     <a [routerLink]="['/']">Home</a>
     <a [routerLink]="['/profile']">Profile</a>
     <a *ngIf="!(isLoggedIn$ | async)" [routerLink]="['/login']">Login</a>
     <a *ngIf="isLoggedIn$ | async" href="" (click)="logout()">Logout</a>
-    <span *ngIf="isLoggedIn$ | async">Hello, {{ firstName$ | async }}</span>
+    <span *ngIf="isLoggedIn$ | async">Hello, {{ (user$ | async)?.first_name }}</span>
   </div>
 </nav>
