--- a/FinalAppProject/NepaleseGame/frontend/src/styles.css
+++ b/FinalAppProject/NepaleseGame/frontend/src/styles.css
@@ -3,23 +3,11 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
-    background: linear-gradient(135deg, red, lightyellow, blue, skyblue, green);
+    background: linear-gradient(135deg, skyblue, yellow);
     background-size: 400% 400%;
     animation: gradientAnimation 15s ease infinite;
   }
-  
-  @keyframes gradientAnimation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  
+   
   .container {
     max-width: 1200px;
     margin: 0 auto;
