--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/footer/footer.component.html
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/footer/footer.component.html
@@ -1,10 +1,16 @@
-<footer>
-  <nav>
-      <ul>
-          <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
-          <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
-          <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-      </ul>
-  </nav>
-  <p>Author: <a href="https://github.com/rrajchal/MSSE661WebSoftwareDevelopment/tree/main/FinalAppProject">Rajesh Rajchal</a></p>
-</footer>
+
+<div class="content">
+    <div class="main">
+    </div>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+            </ul>
+        </nav>
+        <p>Author: <a href="https://github.com/rrajchal/MSSE661WebSoftwareDevelopment/tree/main/FinalAppProject">Rajesh Rajchal</a></p>
+    </footer>
+</div>
+
