--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/header/header.component.css
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/header/header.component.css
@@ -11,10 +11,26 @@
     flex-grow: 1;
     text-align: center;
   }
+
+  .playfair-display-title h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.5em;
+    font-weight: 400;
+    color:blue;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    margin: 0;
+    padding: 10px 0;
+  }
   
   .navbar-links {
     display: flex;
     gap: 15px;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5em;
   }
   
   .navbar-links a {
