--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/home/home.component.css
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/home/home.component.css
@@ -10,7 +10,7 @@
 }
 
 .description p {
-  font-family: 'lora', serif;
+  font-family: 'Lora', serif;
   font-size: 1.5em;
   line-height: 1.6;
 }
@@ -31,6 +31,8 @@
   width: 300px;
   cursor: pointer;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
 }
 
 .game-card:hover {
@@ -48,6 +50,7 @@
   font-family: "Playfair Display", serif;
   padding: 15px;
   text-align: left;
+  flex-grow: 1;
 }
 
 .game-details h2 {
@@ -59,8 +62,14 @@
   text-align: left;
 }
 
+.view-more-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
+  padding: 10px;
+}
+
 .view-more-button {
-  margin-top: 10px;
   padding: 10px 20px;
   font-size: 14px;
   border: none;
@@ -69,7 +78,6 @@
   color: white;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  align-items: center;
 }
 
 .view-more-button:hover {
