Improved front end and added CRUD for games

--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/home/home.component.css
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/home/home.component.css
@@ -4,11 +4,6 @@
   padding: 20px;
 }
 
-.title {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
 .description p {
   font-family: 'Lora', serif;
   font-size: 1.5em;
@@ -51,6 +46,9 @@
   padding: 15px;
   text-align: left;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .game-details h2 {
@@ -66,24 +64,5 @@
   display: flex;
   justify-content: center;
   margin-top: auto;
-  padding: 10px;
-}
-
-.view-more-button {
-  padding: 10px 20px;
-  font-size: 14px;
-  border: none;
-  border-radius: 5px;
-  background-color: #007bff;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.view-more-button:hover {
-  background-color: #0056b3;
-}
-
-.description {
-  padding: 50px;
+  padding-bottom: 10px;
 }
