--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/login/login.component.html
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   <h2>Login</h2>
-  <form (ngSubmit)="doLogin($event)">
+  <form>
     <div class="form-group">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" required>
@@ -9,7 +9,10 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
     </div>
-    <button type="submit">Login</button>
+    <app-button 
+      [label]="'Login'" 
+      (click)="doLogin($event)">
+    </app-button>
     <p id="message" class="error-message" style="display: none;"></p>
   </form>
   
