--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/profile/profile.component.html
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/profile/profile.component.html
@@ -20,10 +20,12 @@
         </tr>
       </table>
       <div class="button-container">
-        <button (click)="editProfile()">Edit Profile</button>
+        <app-button
+          [label]="'Edit Profile'"
+          (click)="editProfile()">
+        </app-button>
       </div>
     </div>
-  
     <div *ngIf="editMode">
       <form (ngSubmit)="saveProfile()">
         <div class="form-group">
@@ -43,7 +45,10 @@
           <input [(ngModel)]="user.email" type="email" id="email" name="email" required>
         </div>
         <div class="button-container">
-          <button type="submit">Save</button>
+          <app-button
+            [label]="'Save'"
+            (click)="saveProfile()">
+          </app-button>
         </div>
       </form>
     </div>
