--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/register/register.component.html
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/register/register.component.html
@@ -21,7 +21,10 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
     </div>
-    <button type="submit">Register</button>
+    <app-button
+      [label]="'Register'"
+      (click)="doRegister($event)">
+    </app-button>
     <p id="message" class="error-message" style="display: none;"></p>
   </form>
   <p>Already have an account? <a [routerLink]="['/login']">Login</a></p>
