--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/login/login.component.css
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/login/login.component.css
@@ -1,5 +1,5 @@
 .login-container {
-    max-width: 400px;
+    max-width: 500px;
     margin: 50px auto;
     padding: 20px;
     background-color: #f9f9f9;
@@ -15,6 +15,7 @@
   
   .form-group {
     margin-bottom: 15px;
+    padding: 0 20px 0 5px;
     text-align: left;
   }
   
