--- a/FinalAppProject/NepaleseGame/frontend/src/app/components/register/register.component.css
+++ b/FinalAppProject/NepaleseGame/frontend/src/app/components/register/register.component.css
@@ -16,6 +16,7 @@
   .form-group {
     margin-bottom: 15px;
     text-align: left;
+    padding: 0 20px 0 5px;
   }
   
   .form-group label {
@@ -33,20 +34,6 @@
 
   .error-message {
     color: red;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
   }
   
   p {
